# nutabi_suite

./: .gitignore  compose.yaml
.githooks/: pre-commit
api/: .gitignore  Cargo.toml  Dockerfile
api/.sqlx/: query-660c44eb34ae4825d526c79edbe1044d7b25f0787eea891c878f185f7184c460.json  query-c363982fa553bc33967f93a2de25692f529ac14b28a7ccb48f8aa44a4171b0f6.json
api/src/: config.rs  lib.rs  main.rs
api/src/api/: mod.rs
api/src/api/v1/: data_source.rs  location.rs  mod.rs
api/src/commons/: app_state.rs  config.rs  location.rs  mod.rs  require_man.rs
api/src/commons/relations/: data_source.rs  location.rs  mod.rs
api/src/routes/: mod.rs
api/src/routes/v1/: location.rs  mod.rs
migrations/: 0001_location_init.down.sql  0001_location_init.up.sql  0002_datasource_init.down.sql  0002_datasource_init.up.sql  0003_location_add_source.down.sql  0003_location_add_source.up.sql  0004_timestamp_add_not_null_constraint.down.sql  0004_timestamp_add_not_null_constraint.up.sql  0005_datasource_add_accesskey.down.sql  0005_datasource_add_accesskey.up.sql
