[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio-native-tls", "chrono"] }
tokio = { version = "1.43", features = ["full", "tracing"] }
tracing = "0.1"
tracing-subscriber = "0.3"